# ACG_Kursach

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: circle.vert
src/: AppContext.h  Config.h  UI.cpp  UI.h  main.cpp
src/core/: Body.h  Physics.cpp  Physics.h  Simulation.cpp  Simulation.h
src/render/: Renderer.cpp  Renderer.h
src/render/shaders/: Shader.cpp  Shader.h
src/ui/: UI.cpp  UI.h
